# enterprise_kafka_architecutre

./: .gitignore  README.md  pyproject.toml
faker_log_gen/: README.md  apache-fake-log-gen.py  log_paring_procesor.py
kafka_architecture/upstream_kafka/up_kafka1/: delete_topic.py  kafka-compose.yml  mirror_maker.py
